<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemplePhotos"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/t10"
        android:textColor="#000"
        android:textSize="18dp"
        android:textStyle="bold"
        android:gravity="center"
        android:onClick="sriveerathmuphotos"
        android:background="@drawable/linear_layout_border_shadow"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/t11"
        android:textColor="#000"
        android:textSize="18dp"
        android:textStyle="bold"
        android:gravity="center"
        android:onClick="srisantharamurthiphotos"
        android:background="@drawable/linear_layout_border_shadow"
        android:layout_margin="10dp"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        ads:adSize="BANNER"
        android:layout_above="@+id/scr"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/Admob_Banner_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>